[gd_scene load_steps=9 format=2]

[ext_resource path="res://escena1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Espacio.gd" type="Script" id=2]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/space.png" type="Texture" id=5]
[ext_resource path="res://sound/death.mp3" type="AudioStream" id=6]
[ext_resource path="res://sound/game.mp3" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 640, 800, 0, 0, 0, 0, 0, 800, 0, 0, 0, 0, 0, 0 )
}

[node name="Espacio" type="Node"]
script = ExtResource( 2 )
Roca = ExtResource( 3 )

[node name="Fondo" type="TextureRect" parent="."]
margin_right = 1500.0
margin_bottom = 1000.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="RocaTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="InicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 320, 400 )

[node name="Camino" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="rocaPosicion" type="PathFollow2D" parent="Camino"]

[node name="CanvasLayer" parent="." instance=ExtResource( 4 )]

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="AudioMuerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="golpe" from="Player" to="." method="game_over"]
[connection signal="timeout" from="RocaTimer" to="." method="_on_RocaTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]
[connection signal="iniciar_juego" from="CanvasLayer" to="." method="nuevo_juego"]
